# llm-webui-app

./: .gitignore  docker-compose.yml  docker-compose.yml-anythingllm  docker-compose.yml-librechat  docker-compose.yml-openwebui
app/anythingllm/: Dockerfile
app/mcp-custom/: Dockerfile  requirements.txt
app/mcp-custom/conf/: config.json.example
app/mcp-custom/mcp/mcp-server-demo/: pyproject.toml
app/mcp-custom/mcp/mcp-server-demo/src/: server.py
app/mcp-server/: Dockerfile
app/mcposerver/: Dockerfile  requirements.txt
